@@ -77,12 +77,21 @@
     margin-bottom: 0px;
 
     > .dropdown {
-      margin-right: 10px;
+      margin-right: $gl-padding-top;
       display: inline-block;
     }
 
     > .btn {
+      margin-right: $gl-padding-top;
       display: inline-block;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+
+    > .btn-grouped {
+      float: none;
     }
 
     > form {
@@ -94,7 +103,7 @@
       display: inline-block;
       position: relative;
       top: 1px;
-      margin-right: 10px;
+      margin-right: $gl-padding-top;
 
       /* Medium devices (desktops, 992px and up) */
       @media (min-width: $screen-md-min) { width: 200px; }
