@@ -4,8 +4,3 @@
   margin-right: auto;
   padding-right: 7px;
 }
-
-.wiki-last-edit-by {
-  font-size: 80%;
-  font-weight: normal;
-}
