@@ -1,7 +1,7 @@
 - page_title "Applications"
 - header_title page_title, applications_profile_path
 
-.gray-content-block.top-block
+.alert.alert-help.prepend-top-default
   - if user_oauth_applications?
     Manage applications that can use GitLab as an OAuth provider,
     and applications that you've authorized to use your account.
