@@ -1,7 +1,7 @@
 - page_title "Audit Log"
 - header_title page_title, audit_log_profile_path
 
-.gray-content-block.top-block
+.alert.alert-help.prepend-top-default
   History of authentications
 
 .prepend-top-default
