@@ -1,24 +1,22 @@
 - page_title "Emails"
 - header_title page_title, profile_emails_path
 
-.gray-content-block.top-block
-  Control emails linked to your account
-
-%ul.prepend-top-default
-  %li
-    Your
-    %b Primary Email
-    will be used for avatar detection and web based operations, such as edits and merges.
-  %li
-    Your
-    %b Notification Email
-    will be used for account notifications.
-  %li
-    Your
-    %b Public Email
-    will be displayed on your public profile.
-  %li
-    All email addresses will be used to identify your commits.
+.alert.alert-help.prepend-top-default
+  %ul
+    %li
+      Your
+      %b Primary Email
+      will be used for avatar detection and web based operations, such as edits and merges.
+    %li
+      Your
+      %b Notification Email
+      will be used for account notifications.
+    %li
+      Your
+      %b Public Email
+      will be displayed on your public profile.
+    %li
+      All email addresses will be used to identify your commits.
 
 .panel.panel-default
   .panel-heading
