@@ -1,7 +1,7 @@
 - page_title "Password"
 - header_title page_title, edit_profile_password_path
 
-.gray-content-block.top-block
+.alert.alert-help.prepend-top-default
   - if @user.password_automatically_set?
     Set your password.
   - else
