@@ -1,8 +1,7 @@
 - page_title 'Preferences'
 - header_title page_title, profile_preferences_path
-- @blank_container = true
 
-.alert.alert-help
+.alert.alert-help.prepend-top-default
   These settings allow you to customize the appearance and behavior of the site.
   They are saved with your account and will persist to any device you use to
   access the site.
