@@ -1,4 +1,4 @@
-.gray-content-block.top-block
+.alert.alert-help.prepend-top-default
   This information will appear on your profile.
   - if current_user.ldap_user?
     Some options are unavailable for LDAP accounts
