@@ -1,5 +1,3 @@
-- @blank_container = true
-
 .project-edit-container.prepend-top-default
   .project-edit-errors
   .project-edit-content
