@@ -1,12 +1,11 @@
-%span.pull-right
-  - if (@page && @page.persisted?)
-    = link_to namespace_project_wiki_history_path(@project.namespace, @project, @page), class: "btn btn-grouped" do
-      Page History
-    - if can?(current_user, :create_wiki, @project)
-      = link_to namespace_project_wiki_edit_path(@project.namespace, @project, @page), class: "btn btn-grouped" do
-        %i.fa.fa-pencil-square-o
-        Edit
-    - if can?(current_user, :admin_wiki, @project)
-      = link_to namespace_project_wiki_path(@project.namespace, @project, @page), data: { confirm: "Are you sure you want to delete this page?"}, method: :delete, class: "btn btn-remove" do
-        = icon('trash')
-        Delete
+- if (@page && @page.persisted?)
+  = link_to namespace_project_wiki_history_path(@project.namespace, @project, @page), class: "btn btn-grouped" do
+    Page History
+  - if can?(current_user, :create_wiki, @project)
+    = link_to namespace_project_wiki_edit_path(@project.namespace, @project, @page), class: "btn btn-grouped" do
+      %i.fa.fa-pencil-square-o
+      Edit
+  - if can?(current_user, :admin_wiki, @project)
+    = link_to namespace_project_wiki_path(@project.namespace, @project, @page), data: { confirm: "Are you sure you want to delete this page?"}, method: :delete, class: "btn btn-remove" do
+      = icon('trash')
+      Delete
