@@ -16,4 +16,4 @@
         = icon('plus')
         New Page
 
-      = render 'projects/wikis/new'
+= render 'projects/wikis/new'
