@@ -1,16 +1,20 @@
 - page_title "Edit", @page.title.capitalize, "Wiki"
 = render "header_title"
-
 = render 'nav'
-.gray-content-block
-  .pull-right
+
+.top-area
+  .nav-text
+    %strong
+      - if @page.persisted?
+        = link_to @page.title.capitalize, namespace_project_wiki_path(@project.namespace, @project, @page)
+      - else
+        = @page.title.capitalize
+    %span.light
+      &middot;
+      Edit Page
+
+  .nav-controls
     = render 'main_links'
 
-  %h3.page-title.oneline
-    %span.light Edit Page
-    - if @page.persisted?
-      = link_to @page.title, namespace_project_wiki_path(@project.namespace, @project, @page)
-    - else
-      = @page.title
 
 = render 'form'
