@@ -1,11 +1,14 @@
 - page_title "History", @page.title.capitalize, "Wiki"
 = render "header_title"
-
 = render 'nav'
-.gray-content-block
-  %h3.page-title
-    %span.light History for
-    = link_to @page.title, namespace_project_wiki_path(@project.namespace, @project, @page)
+
+.top-area
+  .nav-text
+    %strong
+      = link_to @page.title.capitalize, namespace_project_wiki_path(@project.namespace, @project, @page)
+    %span.light
+      &middot;
+      History
 
 .table-holder
   %table.table
