@@ -2,15 +2,12 @@
 = render "header_title"
 
 = render 'nav'
-.gray-content-block
-  All pages in this wiki are listed below.
-  
+
 %ul.content-list
   - @wiki_pages.each do |wiki_page|
     %li
-      %h4
-        = link_to wiki_page.title, namespace_project_wiki_path(@project.namespace, @project, wiki_page)
-        %small (#{wiki_page.format})
-        .pull-right
-          %small Last edited #{time_ago_with_tooltip(wiki_page.commit.authored_date)}
+      = link_to wiki_page.title, namespace_project_wiki_path(@project.namespace, @project, wiki_page)
+      %small (#{wiki_page.format})
+      .pull-right
+        %small Last edited #{time_ago_with_tooltip(wiki_page.commit.authored_date)}
 = paginate @wiki_pages, theme: 'gitlab'
